added sqlmodel, create db,dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,14 +3,14 @@ FROM python:3.9
 
 
 #
-WORKDIR /code
+WORKDIR /user/src/app
 #
 
 COPY ./requirements.txt /app/requirements.txt
 #
 
 
-RUN pip3 install --no-cache-dir --upgrade -r /code/requirements.txt
+RUN pip3 install --no-cache-dir --upgrade -r /app/requirements.txt
 # 
 
 EXPOSE 8000:8000
