--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,14 @@
 FROM python:3.9
 
-COPY requirements.txt ./requirements.txt
+WORKDIR /user/src/frontend
+
+COPY requirements.txt requirements.txt
 
 RUN pip3 install -r requirements.txt
 
-COPY . /app
+COPY . .
 
-WORKDIR /app
+EXPOSE 8501
 
-EXPOSE 5000
-
-CMD streamlit run --server.port 8051 --server.enableCORS false overview.py
+CMD streamlit run --server.port 8501 --server.enableCORS false overview.py
 
