--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -8,29 +8,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
       - name: Set up Python 3.9
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v2
         with:
           python-version: "3.9"
-      - run: 
-              venv/Scripts activate
+      
+      - name: Activate virtual environment
+        run: |
+          python -m venv venv
+          source venv/bin/activate
       
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-          source activate SalesPerformance-frontend
+          source venv/bin/activate
+          pip install playwright
           playwright install chromium
-          docker compose build
+          docker-compose build
+          
       - name: Run application
         run: |
-          docker compose build
-          docker compose up -d
+          docker-compose up -d
           sleep 10
-          souce activate SalesPerformance-frontend
+          source venv/bin/activate
           pytest test_end_to_end/test_frontend.py
-
-      - name: Upload Image Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: image-artifact
-          path: screenshot.png
