--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,12 +29,12 @@ jsonschema-specifications==2023.7.1
 kiwisolver==1.4.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
-matplotlib==3.7.2
+matplotlib
 mdurl==0.1.2
 numpy==1.25.1
 packaging==23.1
 pandas==2.0.3
-Pillow==10.0.1
+Pillow
 protobuf==4.23.4
 pyarrow==14.0.1
 pydantic==1.10.12
@@ -58,7 +58,7 @@ SQLAlchemy==1.4.41
 sqlalchemy2-stubs==0.0.2a35
 sqlmodel==0.0.8
 starlette==0.27.0
-streamlit==1.24.1
+streamlit
 tenacity==8.2.2
 toml==0.10.2
 toolz==0.12.0
